fix column align and add container

--- a/src/components/Column/column.less
+++ b/src/components/Column/column.less
@@ -6,6 +6,11 @@
     width: @column-width-l;
     padding: 0 @column-padding;
     display: inline-block;
+    vertical-align: top;
+}
+
+.gg-column_container {
+    padding: 0;
 }
 
 each(range(@column-counts-xs), {
